minio/assets/ingress-panel.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-panel-ingress
  namespace: minio
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - storage-panel.sepidan.net
    secretName: minio-tls
  rules:
  - host: storage-panel.sepidan.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio
            port:
              number: 9001
